--- a/do-me-a-flavor/package.json
+++ b/do-me-a-flavor/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "react-router-dom": "^7.4.0"
   }
 }
